<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeadBoActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title_size"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:fontFamily="@font/digitalt"
        android:text="@string/leaderboard_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/option_back"
        android:weightSum="5"
        android:layout_marginBottom="@dimen/option_margin">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:textSize="@dimen/hint_size"
            android:text="@string/title_lb_name"
            android:gravity="center"
            android:fontFamily="@font/digitalt"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:textSize="@dimen/hint_size"
            android:text="@string/title_lb_score"
            android:gravity="center"
            android:fontFamily="@font/digitalt"
            android:textColor="@color/colorPrimary"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.25"
            android:textSize="@dimen/hint_size"
            android:text="@string/title_lb_round"
            android:gravity="center"
            android:fontFamily="@font/digitalt"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>


        <ListView
        android:id="@+id/lv_lb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        android:layout_weight="1"
        ></ListView>

</LinearLayout>